Fixed extra bold on safari (removed bold from style)

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ body.dark .home-icon img {
     line-height: 1.7;
     font-family: 'Poppins', sans-serif;
     font-size: 19px;
-    font-weight: bold;
+/*    font-weight: bold;*/
     padding-top: 1%;
     padding-bottom: 5%;
     padding-left: 12%;
